# Head_and_gaze_tracking_control_for_a_smart_wheelchair_with_a_robot_arm

./: README.MD
husky_ur5_robotiq_85/: CMakeLists.txt  package.xml
husky_ur5_robotiq_85/config/: controller_list.yaml  husky_controller.yaml  joint_state_controller.yaml  ur5_robotiq_85_controller.yaml
husky_ur5_robotiq_85/controller/: arm_controller_ur5.yaml  gripper_controller_robotiq.yaml  husky_controller.yaml
husky_ur5_robotiq_85/launch/: controller_utils.launch  husky_ur5_robotiq_85f_gazebo.launch  husky_ur5_robotiq_85f_gazebo_rviz.launch
husky_ur5_robotiq_85/rviz/: husky_ur5_robotiq_85.rviz
husky_ur5_robotiq_85/scripts/: test_action.py
husky_ur5_robotiq_85/urdf/: common.gazebo.xacro  husky_ur5_robotiq85_gripper.urdf.xacro  ur.transmission.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
husky_ur5_robotiq_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_ur5_robotiq_85_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5_husky_robotiq_85f.srdf
husky_ur5_robotiq_85_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
husky_ur5_robotiq_85_moveit_config/world/: hrit_world.world
mobile_manipulation_alg/: CMakeLists.txt  package.xml
mobile_manipulation_alg/config/: servo_configuration_file.yaml
mobile_manipulation_alg/launch/: launch_servo_server.launch
mobile_manipulation_alg/msg/: vision_command.msg
mobile_manipulation_alg/scripts/tracker/: eye_tracker_node.py  mpFaceSimplified.py
mobile_manipulation_alg/src/: wheel_chair_head_control_manager_node.cpp
