CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(husky_ur5_robotiq_85)

FIND_PACKAGE(catkin REQUIRED rospy roscpp control_msgs)
CATKIN_PACKAGE()

INCLUDE_DIRECTORIES()


catkin_install_python(PROGRAMS scripts/test_action.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

#############
## Install ##
#############

INSTALL(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
