<?xml version="1.0"?>

<package format="2">
  <name>husky_ur5_robotiq_85</name>
  <version>0.1.0</version>
  <description>
    URDF description for Universal UR5 robot with a robotiq gripper.
    The model for the UR5 robot (without gripper) was taken from:
    https://github.com/ros-industrial/universal_robot.git
  </description>

  <maintainer email="stevedan.o.omodolor@gmail.com">Stevedan Ogochukwu Omodolor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_description</exec_depend>
  <!-- <exec_depend>husky_description</exec_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_depend>visp_ros</build_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!-- <build_export_depend>visp_ros</build_export_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>control_msgs</build_depend>

  <build_export_depend>control_msgs</build_export_depend>

  <exec_depend>control_msgs</exec_depend>


  <export>
  </export>

</package>
